--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
