--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@becode/eslint-config": "^0.9.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.2",
     "eslint": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
@@ -38,19 +39,23 @@
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.3",
+    "node-sass": "^5.0.0",
     "prettier": "^2.0.5",
+    "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bulma": "^0.9.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.15",
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sass-loader": "^10.1.1"
   },
   "husky": {
     "hooks": {
