create react strucutre files and directories

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "sass-loader": "^10.1.1"
   },
   "husky": {
