--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "node-sass": "^5.0.0",
     "prettier": "^2.0.5",
     "style-loader": "^2.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
     "cors": "^2.8.5",
