--- a/package.json
+++ b/package.json
@@ -51,10 +51,14 @@
     "bulma": "^0.9.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "leaflet": "^1.7.1",
+    "mapbox-gl": "^2.1.1",
+    "mapbox-gl-leaflet": "0.0.14",
     "mongoose": "^5.11.15",
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^10.1.1"
   },
