--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
     "cors": "^2.8.5",
@@ -59,6 +62,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^3.1.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^10.1.1"
   },
