--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.12.16",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.9.4",
     "@becode/eslint-config": "^0.9.1",
     "babel-eslint": "^10.1.0",
@@ -42,6 +42,7 @@
     "node-sass": "^5.0.0",
     "prettier": "^2.0.5",
     "style-loader": "^2.0.0",
+    "svg-url-loader": "^7.1.1",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
