--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
     "cors": "^2.8.5",
