--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@becode/eslint-config": "^0.9.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "bcryptjs": "^2.4.3",
     "css-loader": "^5.0.2",
     "eslint": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -50,7 +51,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
     "cors": "^2.8.5",
