--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^3.1.0",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^10.1.1"
   },
