--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "bulma": "^0.9.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
     "mini-create-react-context": "^0.4.1",
