--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,16 +19,16 @@ services:
             - "80:12345"
             - "9229"
         command: "nodemon --inspect=0.0.0.0:9229 --watch bin/server bin/server/index.js"
-    mongo:
-        image: "mongo"
-        restart: "always"
-        ports:
-            - "27017:27017"
-        volumes:
-            - "mongo_db:/data/db"
-            - "./_dev:/usr/dump"
-        environment:
-            MONGO_INITDB_ROOT_USERNAME: "dev"
-            MONGO_INITDB_ROOT_PASSWORD: "dev"
-volumes:
-    mongo_db:
+    # mongo:
+    #     image: "mongo"
+    #     restart: "always"
+    #     ports:
+    #         - "27018:27018"
+    #     volumes:
+    #         - "mongo_db:/data/db"
+    #         - "./_dev:/usr/dump"
+    #     environment:
+    #         MONGO_INITDB_ROOT_USERNAME: "dev"
+    #         MONGO_INITDB_ROOT_PASSWORD: "dev"
+# volumes:
+#     mongo_db:
