--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mongoose": "^5.11.15",
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
+    "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
     "react-leaflet": "^3.1.0",
     "react-responsive": "^8.2.0",
