--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
+    "react-svg-loader": "^3.0.3",
     "sass-loader": "^10.1.1"
   },
   "husky": {
