--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "babel-loader": "^8.1.0",
     "bcryptjs": "^2.4.3",
     "css-loader": "^5.0.2",
-    "eslint": "^7.0.0",
+    "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-unicorn": "^20.0.0",
@@ -51,6 +51,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
     "cors": "^2.8.5",
@@ -59,7 +60,7 @@
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
     "mini-create-react-context": "^0.4.1",
-    "mongoose": "^5.11.15",
+    "mongoose": "^5.11.16",
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
     "react-color": "^2.19.3",
