--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-dom": "^16.13.1",
     "react-leaflet": "^3.1.0",
     "react-leaflet-markercluster": "^3.0.0-rc1",
+    "react-modal": "^3.12.1",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-svg-loader": "^3.0.3",
