--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.9.4",
     "@becode/eslint-config": "^0.9.1",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "css-loader": "^5.0.2",
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -71,7 +75,8 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-svg-loader": "^3.0.3",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "validator": "^13.5.2"
   },
   "husky": {
     "hooks": {
