--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "author": "leny <leny@becode.org>",
   "license": "MIT",
   "private": true,
+  "engines": {
+    "node": "15.9.0",
+    "npm": "7.5.2"
+  },
   "scripts": {
     "lint": "npx eslint --fix --cache --ignore-pattern 'docs/*' src",
     "build:server": "npx babel src/server -s --out-dir bin/server",
     "work:server": "npx babel src/server -s --watch --verbose --out-dir bin/server",
     "build:client": "npx webpack --progress --profile --colors",
     "work:client": "npx webpack --env=dev --progress",
-    "build": "npm run build:server && npm run build:client"
+    "start": "npm run build:server && npm run build:client"
   },
   "lint-staged": {
     "*.js": [
